Updated background photo and fixed alignment on scroll

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -413,13 +413,16 @@ body {
 	line-height: 90%;
 	margin-bottom: 80px;
 } */
-#services .block-heading h1 {
-    color: #fff;
-	font-weight: 400;
-    font-size: 55px;
-	word-spacing: 5px;
+
+#services {
+	padding: 60px 0;
 }
 
+#services .block-heading h1 {
+    color: rgb(0, 129, 129);
+	font-weight: 400;
+    font-size: 55px;
+}
 
 /* ============================  animated  numbers   ==================================*/
 
@@ -431,7 +434,7 @@ body {
 
 #numbers
 {
-	background: url(../img/bg/number1.gif) repeat center center fixed;
+
 }
 #numbers .overlay{
     padding: 60px 0px 80px 0px;
